--- a/.gitignore
+++ b/.gitignore
@@ -78,7 +78,9 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/
+data/raw/*
+data/interim/*
+data/processed/*
 
 # Mac OS-specific storage files
 .DS_Store
