--- a/.gitignore
+++ b/.gitignore
@@ -78,9 +78,8 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-data/raw/*
-data/interim/*
-data/processed/*
+data/SLR/raw/*
+data/SLR/processed/*
 
 # Mac OS-specific storage files
 .DS_Store
