--- a/configs/SLR/phoenix14.yaml
+++ b/configs/SLR/phoenix14.yaml
@@ -1,4 +1,5 @@
-dataset_root: ./data/SLR/raw/phoenix2014/phoenix-2014-multisigner
-dict_path: ./data/SLR/processd/phoenix2014/gloss_dict.npy
+dataset_root: ./data/SLR/processed/phoenix2014/phoenix-2014-multisigner
+dict_path: ./data/SLR/processed/phoenix2014/gloss_dict.npy
 evaluation_dir: ./src/SLR/models/evaluation
-evaluation_prefix: phoenix2014-groundtruth
+evaluation_prefix: groundtruth
+label_dir: ./data/SLR/processed/phoenix2014
