--- a/configs/SLR/phoenix2014T-swin-tiny.yaml
+++ b/configs/SLR/phoenix2014T-swin-tiny.yaml
@@ -1,6 +1,6 @@
 model_args:
   num_classes: 1116
-  backbone: resnet50
+  backbone: swinv2_tiny_window8_256
   conv_type: 2
   use_bn: True
   hidden_size: 1024
